fix(ZNTA-2341) - add spacing above search, remove extra 'x' from suggestions search, update tests

--- a/server/zanata-frontend/src/frontend/app/editor/containers/Root/index.css
+++ b/server/zanata-frontend/src/frontend/app/editor/containers/Root/index.css
@@ -319,7 +319,7 @@ li.DocName span.ellipsis {
 }
 
 .Editor-suggestions.is-search-active .Editor-suggestionsBody {
-  top: calc(var(--Editor-rhythm) * 3);
+  top: calc(var(--Editor-rhythm) * 3.5);
 }
 
 .Editor-suggestionsSearch {
